# runlytics

./: .gitignore  Procfile  README.md  playground.ipynb  pyproject.toml  requirements.txt
data/manual/: corrections.json
src/runlytics/: __init__.py  webhook.py
src/runlytics/analysis/: coach.py
src/runlytics/data_ingest/: health_ingest.py  strava_auth.py  strava_pull.py
src/runlytics/database/: manager.py  models.py
src/runlytics/ingestion/: indoor_handler.py  journal_ingest.py  strava.py  strava_auth.py  strava_ingest.py  webhook.py
src/runlytics/processing/: health_parser.py
