[tool.poetry]
name = "runlytics"
version = "0.1.0"
description = ""
authors = ["Nadav Gerner <nadavgerner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
duckdb = "^1.4.0"
pyarrow = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
