[tool.poetry]
name = "runlytics"
version = "0.1.0"
description = ""
authors = ["Nadav Gerner <nadavgerner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
duckdb = "^1.4.0"
pyarrow = "^21.0.0"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
